--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DH Shah israil</title>
+    <title> Shah israil</title>
     <link rel="icon" href="logo.png"> 
     <link rel="stylesheet" href="color-1.css">
     <link rel="stylesheet" href="style-switcher.css">
